Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <p>Need help with a semester or want to share your experience?</p>
       </div>
       <p class="contact-details">
-        Email: <a href="mailto:excemple@gmail.com">excemple@gmail.com</a>
+        Email: <a href="mailto:mohamedachrafkribbi@gmail.com">mohamedachrafkribbi@gmail.com</a>
       </p>
     </section>
   </main>
